# Page-Analyzer

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: own_flow.yml
page_analyzer/: app.py  data_validator.py  db.py  html_parser.py  sql.py
page_analyzer/templates/: base.html  footer.html  header.html  index.html  main.html  not_found.html  url.html  urls.html
page_analyzer/templates/errors/: not_found.html
page_analyzer/templates/pages/: base.html  footer.html  header.html  index.html  url.html  urls.html
