[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Andrey M. <tolkoigri@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
flake8 = "^7.1.0"
gunicorn = "^22.0.0"
psycopg2 = "^2.9.9"
postgres = "^4.0"
psycopg2-binary = "^2.9.9"
validators = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
